# sqlite-viewer

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  pyproject.toml
demo/: README.md  books.sqlite  gps-course.sqlite  test.sqlite
docs/: 00-repo-structure.md  01-product-requirements.md  02-architecture.md  03-ui-ux-spec.md  04-api-spec.md  05-testing-strategy.md  06-delivery-plan.md  07-codex-build-brief.md
src/sqlite_browser/: __init__.py  __main__.py  app.py  cli.py  config.py  db.py  models.py  session_store.py
src/sqlite_browser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sqlite_browser/routes/: api.py  pages.py
src/sqlite_browser/static/: app.css  app.js
src/sqlite_browser/templates/: index.html
tests/: conftest.py  package_smoke_runner.py  test_api.py  test_cli.py  test_db.py  test_smoke.py
